--- a/classes/foody.html
+++ b/classes/foody.html
@@ -81,6 +81,13 @@
         <p id="txt">Hot spicy Food 🌶</p>
         <img src="/media/Intersect.png" />
       </div>
+
+      <div id="butt">
+        <button onclick="nextItem">next</button>
+        <button>back</button>
+      </div>
+
+
       <div id="gridCon">
       <div class="gg">
         <div class="ggg"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
@@ -116,5 +123,6 @@
      
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/js/card.js"></script>
   </body>
 </html>
